force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Advanced_Criteria__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Advanced_Criteria__c</fullName>
    <description>This field is optional and must be manually populated. It stores the Forms syntax that determines if a requirement will be created. If a user has criteria configured for an object and creates an object that meets the criteria, then Smart Checklist will populate the associated tasks on the object. If an object does not meet the criteria defined, then the requirement will not be created.</description>
    <inlineHelpText>This optional field stores the Forms syntax that determines if a requirement will be created.</inlineHelpText>
    <label>Advanced Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>