force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional field with the category associated to the requirement.</description>
    <inlineHelpText>The system automatically populates this optional field with the category associated to the requirement.</inlineHelpText>
    <label>Category</label>
    <referenceTo>LLC_BI__Requirement_Category__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>