force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Due_Date__c</fullName>
    <description>This optional field contains the date by which this Requirement must be completed.</description>
    <inlineHelpText>This optional field contains the date by which this Requirement must be completed.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>