force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Hard_Stop__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Hard_Stop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field to indicate that this Requirement must be completed before the Context Object can move beyond the Checkpoint Context.</description>
    <inlineHelpText>Check this field to indicate that this Requirement must be completed before the Context Object can move beyond the Checkpoint Context.</inlineHelpText>
    <label>Hard Stop</label>
    <type>Checkbox</type>
</CustomField>