force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Is_Excluded_From_Auto_Generation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Excluded_From_Auto_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The administrator populates this optional checkbox field to specify that this requirement should not be auto-generated. By default, it is false.</description>
    <inlineHelpText>Select this option to disable automatic generation of this requirement.</inlineHelpText>
    <label>Do Not Auto-Generate</label>
    <type>Checkbox</type>
</CustomField>