force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Legal_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Legal_Description__c</fullName>
    <description>The administrator populates this optional text field with the full legal description for the requirement.</description>
    <inlineHelpText>This is the full legal description for the requirement.</inlineHelpText>
    <label>Legal Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>