force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Manually_Waived__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Manually_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field is optional and indicates whether a Requirement record has been manually waived. The system automatically sets the Status field on a Requirement record that has not been manually waived if the record does not meet certain criteria. Manually waiving a Requirement record prevents the Status field from being automatically set. Users may manually waive a record by navigating to the checklist and selecting &apos;Waived&apos; in the user interface.</description>
    <inlineHelpText>This field indicates whether a Requirement record has been manually waived. The system sets this field automatically if the user sets a Requirement to &apos;Waived&apos; in the user interface.</inlineHelpText>
    <label>Manually Waived</label>
    <type>Checkbox</type>
</CustomField>