force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Requirement_Type__c</fullName>
    <description>The user populates this picklist field to define the type of requirement.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Condition Precedent</fullName>
            </value>
            <value>
                <fullName>Condition Subsequent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>