force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Sub_Status__c</fullName>
    <description>The user populates this optional picklist field to define the specific status of a requirement in process. This field is controlled by the Sub-Status Attribute field which dictates applicable sub-statuses by context, status, category, and other requirement attributes as determined by the financial institution. By default, it is blank.</description>
    <inlineHelpText>Select the applicable sub-status for the requirement in process.</inlineHelpText>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__Sub_Status_Attribute__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Waiting for Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>