force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Sub_Status_Attribute__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Sub_Status_Attribute__c</fullName>
    <description>The system automatically populates this optional picklist field to control the available values displayed to the end user for the sub-status field. By default, it is blank. An admin is required to configure the picklist values and use Matrix Manager to institute these values.</description>
    <inlineHelpText>This auto-populated field can display the status of the requirement, and determines the available sub-status of the requirement in process.</inlineHelpText>
    <label>Sub-Status Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan-To Do</fullName>
            </value>
            <value>
                <fullName>Loan-In Progress</fullName>
            </value>
            <value>
                <fullName>Loan-Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>